--- a/PtmClient/.classpath
+++ b/PtmClient/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/PtmEJB"/>
-	<classpathentry kind="lib" path="C:/Users/Yarden/JBoss/wildfly-14.0.1.Final/bin/client/jboss-client.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PTM2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
